# ICEX2017

./: .gitignore  CMakeLists.txt  README.md  script.py
resources/: beaufighter_trimmed.mtl  fading_phong_frag.glsl  fading_phong_vert.glsl  fading_tex_phong_frag.glsl  fading_tex_phong_vert.glsl  fading_waving_phong_frag.glsl  fading_waving_phong_vert.glsl  katie.json  normals_frag.glsl  normals_vert.glsl  path.txt  phong_frag.glsl  phong_vert.glsl  renderthirds.json  solid_color_frag.glsl  solid_color_vert.glsl  tex_frag.glsl  world.json
resources/paths/: path.txt  path_test.txt  path_test1.txt  path_test13.txt  path_test14.txt  path_test15.txt  path_test18.txt  path_test2.txt  path_test20.txt  path_test21.txt  path_test22.txt  path_test23.txt  path_test25.txt  path_test26.txt  path_test28.txt  path_test30.txt  path_test34.txt  path_test35.txt  path_test37.txt  path_test39.txt  path_test4.txt  path_test42.txt  path_test44.txt  path_test45.txt  path_test47.txt  path_test5.txt  path_test50.txt  path_test7.txt  path_test8.txt
samy/: CMakeLists.txt  README.md  TODO.md  runthirds.py
samy/resources/: ManoelPRMsCombined.mtl  ManoelPRMsCombined2.mtl  chimney.mtl  path1.txt  path_test.txt  rendercombo.json  rendernormals.json  renderthirds.json  world.json
samy/shaders/: bloom.frag  blur.frag  caustics.frag  caustics.vert  deferred_ubo.frag  deferred_ubo_shadows.frag  dirlight.frag  lightz.frag  lightz.geom  lightz.vert  particle.vert  phong.frag  pointlight.frag  postprocess.frag  simple.frag  skybox.frag  textured_quad.vert  wave_gen.vert
samy/src/: DebugUI.cpp  DebugUI.hpp  GameObject.cpp  GameObject.hpp  LevelParser.cpp  World.cpp  World.hpp  icex_common.hpp  main.cpp  tiny_obj_loader.h  world.json
shaders/: blend.frag  caustics.vert  computeBoundingBoxes.comp  dirlight.frag  dirlight.vert  geometry_pass.frag  lightpass.vert  lightz.vert  particle.frag  postprocess.frag  skybox.vert  terrain.frag  textured_quad.frag  textured_quad_flipped.vert
src/: Bubbles.cpp  Bubbles.h  DebugUI.cpp  GameObject.cpp  Image.h  ImageProcessor.cpp  ImageProcessor.h  LevelParser.cpp  LevelParser.hpp  Link.cpp  Link.h  MatrixStack.cpp  Node.cpp  Node.h  PRMAlg.cpp  PRMAlg.h  README.txt  Shape.cpp  Shape.h  Texture.cpp  Texture.h  Utilities.h  World.cpp  icex_common.hpp  main.cpp  tiny_obj_loader.h
src/Components/: Camera.hpp  Collider.cpp  Component.cpp  Component.hpp  FirstPersonCamera.cpp  FirstPersonCamera.hpp  Heightmap.hpp  Material.cpp  Material.hpp  PRMCombo.cpp  PRMInput.cpp  PRMNorms.hpp  PRMThirds.cpp  Particle.cpp  Particle.hpp  PlayerInput.cpp  ProjectiveTexture.hpp  Shader.cpp  Skybox.cpp  WaterMesh.cpp  WaterMesh.hpp
src/Graphics/: GLBuffer.cpp  GLBuffer.hpp  (+12 more)
(+203 files in other folders)
